--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,14 +1,14 @@
 table{
     width: 100%;
 }
-.td-info{
-    width: fit-content;
-}
 .left-panel{
     width: 25%;
-    height: 60%;
-    margin: 10px 10px 0px 20px;
-    float: left;
+    min-width: 200px;
+    height: auto;
+    margin: 20px auto auto 20px;
+}
+.list-group-item{
+    margin: -1px 0px 5px;
 }
 h4, h3{
     padding: 0px;
@@ -16,11 +16,17 @@ h4, h3{
     font-weight: bold;
 }
 .right-panel{
-    width: 65%;
-    margin-top: 10px;
-    margin-right: 20px;
-    float: right;
+    width: 90%;
+    height: auto;
+    margin: 20px auto auto;
+}
+#two-panels td{
+    padding-top: 0px;
+    vertical-align: top;
 }
 .panel-default{
     margin-bottom: 0px;
+}
+.glyphicon{
+    margin-right: 5px;
 }
