--- a/web/css/main.css
+++ b/web/css/main.css
@@ -21,6 +21,7 @@ h4, h3{
     height: auto;
     margin: 20px auto auto;
     vertical-align: top;
+    overflow: auto;
 }
 .two-panels td{
     padding-top: 0px;
