--- a/web/css/login.css
+++ b/web/css/login.css
@@ -1,10 +1,9 @@
 body {
-    background-image: url('../images/a.jpg');
+    background: url('../images/a.jpg') no-repeat;
     padding: 0px;
     position: relative;
     min-height: 600px;
     min-width: 780px;
-    overflow: hidden;
 }
 
 .title {
